--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "ui-rolling-code",
   "version": "0.1.0",
+  "main": "index.js",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.5",
