--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
     "@storybook/node-logger": "^6.5.13",
     "@storybook/preset-create-react-app": "^4.1.2",
     "@storybook/react": "^6.5.13",
+    "@storybook/storybook-deployer": "^2.8.16",
     "@storybook/testing-library": "^0.0.13",
     "babel-plugin-named-exports-order": "^0.0.2",
     "webpack": "^5.75.0"
